--- a/lab01/index.html
+++ b/lab01/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
   <title>"My Favorite Recipe"</title>
@@ -11,7 +12,7 @@
    <li>2 tablespoon butter </li>
  <li>1 tablespoon brown sugar</li>
  <li>1 teaspoon dried instant yeast</li>
- <li>2 cups all purpose flour</li>
+ <li>2 cups all-purpose flour</li>
  <li>1/4 teaspoon salt</li>
  <li>1 teaspoon aniseed (lightly ground) </li>
  <li>1 egg</li>
@@ -44,4 +45,5 @@
       <a href = "https://www.carolinescooking.com/golfeados-sticky-buns/">Golfeados</a> 
 <br>And this is the link to Caroline's Cooking which is a website with plenty of free recipes: 
   <a href="https://www.carolinescooking.com/">Caroline's Cooking.com<a/></p>
-  <main>
+  </body>
+  </html>
