--- a/lab02/index.html
+++ b/lab02/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
   <title>"My Favorite Recipe"</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="recipe.css">
   </head>
   <body>
   <header><h1>Golfeados</h1></header>
