--- a/lab01/index.html
+++ b/lab01/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
   <title>"My Favorite Recipe"</title>
+  <meta charset="utf-8">
   </head>
   <body>
   <header><h1>Golfeados</h1></header>
