--- a/lab02/index.html
+++ b/lab02/index.html
@@ -9,35 +9,35 @@
   <header><h1>Golfeados</h1></header>
  <h2> Venezuelan cheese sticky buns!</h2>
  <h4>The ingredients that you will need are:</h4>
-<ul>For the dough:<br>
-  <li>3/4 cup milk</li>
+For the dough:
+ <ul><li>3/4 cup milk</li>
    <li>2 tablespoon butter </li>
  <li>1 tablespoon brown sugar</li>
  <li>1 teaspoon dried instant yeast</li>
  <li>2 cups all-purpose flour</li>
  <li>1/4 teaspoon salt</li>
  <li>1 teaspoon aniseed (lightly ground) </li>
- <li>1 egg</li>
-<br>For the Filling:
- <li> 2 tablespoon butter (room temperature)</li>
+   <li>1 egg</li></ul>
+For the Filling:
+<ul> <li> 2 tablespoon butter (room temperature)</li>
  <li>1 cup queso fresco or finely grated hard cheese (eg. parmesan and manchego)</li>
-<li>1/4 cup panela or brown sugar</li>
-<br>For the Syrup:
-<li>1/2 cup panela or brown sugar</li>
+  <li>1/4 cup panela or brown sugar</li></ul>
+For the Syrup:
+<ul><li>1/2 cup panela or brown sugar</li>
 <li>1/2 cup water</li>
 </ul>
 <h4>Instructions:</h4>
-<ol><li>Gently warm the milk, butter, and sugar until the butter melts and milk dissolves. Let it cool until tepid then add yeast and stir.</li><br>
-  <li>Measure out flour, salt and aniseed then add milk-yeast mixture and egg</li><br>
-  <li>Bring the mixture together, transfer to a lightly floured surface and knead for a few minutes, adding flour as kneaded. It should be soft but not too sticky.</li><br>
-  <li>Once smooth, put the dough in a lightly oiled bowl, cover and put in a warm place to rise for around an hour until roughly doubled.</li><br>
-  <li>Following the rise, knock back the dough, roll or press it out into a square around 10in/25cm square then spread on the butter.</li><br>
-  <li>Sprinkle over the cheese then the panela/sugar then roll up relatively tightly.</li><br>
-  <li>Cut the roll into around 8 slices and put in a baking dish, around 10x7in (25x18cm) with just a little space in between.</li><br>
-  <li>Cover and leave to rise again for around 30 minutes until roughly doubled.</li><br>
-  <li>Part way through, preheat oven to 350F/175C.</li><br>
-  <li>Bake for around 30 minutes until golden brown on top</li><br>
-  <li>While they are baking, make the syrup by warming the panela/sugar together over a medium heat, stirring occasionally. Simmer for around 5 minutes to thicken slightly then set aside</li><br>
+<ol><li>Gently warm the milk, butter, and sugar until the butter melts and milk dissolves. Let it cool until tepid then add yeast and stir.</li>
+  <li>Measure out flour, salt and aniseed then add milk-yeast mixture and egg</li>
+  <li>Bring the mixture together, transfer to a lightly floured surface and knead for a few minutes, adding flour as kneaded. It should be soft but not too sticky.</li>
+  <li>Once smooth, put the dough in a lightly oiled bowl, cover and put in a warm place to rise for around an hour until roughly doubled.</li>
+  <li>Following the rise, knock back the dough, roll or press it out into a square around 10in/25cm square then spread on the butter.</li>
+  <li>Sprinkle over the cheese then the panela/sugar then roll up relatively tightly.</li>
+  <li>Cut the roll into around 8 slices and put in a baking dish, around 10x7in (25x18cm) with just a little space in between.</li>
+  <li>Cover and leave to rise again for around 30 minutes until roughly doubled.</li>
+  <li>Part way through, preheat oven to 350F/175C.</li>
+  <li>Bake for around 30 minutes until golden brown on top</li>
+  <li>While they are baking, make the syrup by warming the panela/sugar together over a medium heat, stirring occasionally. Simmer for around 5 minutes to thicken slightly then set aside</li>
   <li>You can lightly brush the rolls with some of the syrup before the last 5-10 minutes of baking, or else just wait until they are done. Either way, once they are out of the oven evenly pour the syrup over the rolls while still warm then leave to cool in the dish. Enjoy warm.</li>
     </ol>
   <h4>Why This is My Favorite Recipe:</h4>
@@ -46,6 +46,7 @@
       This is the link to the recipe above: 
       <a href = "https://www.carolinescooking.com/golfeados-sticky-buns/">Golfeados</a> 
 <br>And this is the link to Caroline's Cooking which is a website with plenty of free recipes: 
-  <a href="https://www.carolinescooking.com/">Caroline's Cooking.com<a/></p>
+  <a href="https://www.carolinescooking.com/">Caroline's Cooking.com</a></p>
   </body>
   </html>
+  
